# JerseyShoreTeam

./: .gitignore  Cargo.toml  README.md
assets/: 500_qa_list.json  500_w2i.json  6000.qdict  6000.w2idict  6000_qa_list.json  6000_w2i.json  corpus.txt  deflections.ddict  deflections.json  dictionary.json  monday_6000.qdict  qa_list.json  questions_answers.json  weights.json  words_to_add.txt
game/: Cargo.toml
game/src/: collide_circle.rs  collidenew.rs  main.rs  parser.rs  rover.rs  ui.rs
src/: CONSTANTS.rs  collide_circle.rs  collidenew.rs  collidenewer.rs  deflections.rs  extrafolders.rs  game_menu.rs  main.rs  maphs.rs  parser.rs  physics.rs  processors.rs  rover.rs  shared_styles.rs  start_menu.rs  ui.rs
