[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alsa = "=0.6.0"
bevy = "0.8.1"
bevy-inspector-egui = "0.13.0"
iyes_loopless = "0.8.0"
rust-stemmers = "1.2.0"
stop-words = "0.3.1"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.48"

[profile.dev.package."*"]
opt-level = 3
